# cascade-hardware-monitor

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
config/: settings.json
docs/: AWESOME_SELFHOSTED_PR.md  RASPBERRY_PI.md
libs/: AI_INTEGRATION.md  README.md
libs/csharp/: README.md
libs/csharp/CascadeHardwareMonitor/: CascadeClient.cs  CascadeHardwareMonitor.csproj  Models.cs
libs/go/: README.md  go.mod
libs/go/cascade/: client.go  models.go
libs/npm-cascade-hardware-monitor/: README.md  package.json
libs/npm-cascade-hardware-monitor/src/: ai.ts  client.ts  index.ts  types.ts  websocket.ts
libs/python/: README.md  pyproject.toml
libs/python/cascade_hardware_monitor/: __init__.py  client.py  exceptions.py  models.py
libs/rust/: Cargo.toml  README.md
libs/rust/src/: client.rs  error.rs  lib.rs  models.rs
plugins/example-plugin/: index.js  manifest.json
plugins/nvidia-smi/: index.js  manifest.json
public/: api-docs.html  index.html
src/: index.ts
src/api/: ai-routes.ts  gpu-routes.ts  history-routes.ts  info-routes.ts  optimization-routes.ts  raspberry-pi-routes.ts  routes.ts  server.ts  static.ts  websocket.ts
src/core/: config.ts  logger.ts
src/electron/: main.ts  preload.ts
src/services/: advanced-monitors.ts  alert-service.ts  component-info.ts  cpu-sensors.ts  fan-controller.ts  gemini-ai.ts  hardware-control.ts  hardware-monitor.ts  history.ts  hwinfo-monitor.ts  inferred-metrics.ts  ipmi-monitor.ts  libre-hardware-monitor.ts  lm-sensors.ts  macos-control.ts  mainboard-sensors.ts  monitor-settings.ts  optimization.ts  plugin-manager.ts  raspberry-pi.ts  smart-monitor.ts  unified-monitors.ts
src/services/gpu/: amd.ts  apple.ts  index.ts  intel.ts  nvidia.ts
src/types/: hardware.ts  index.ts
